# ros2_ws

install/: local_setup.sh  setup.sh
install/my_robot_description/share/my_robot_description/: package.sh
install/my_robot_description/share/my_robot_description/launch/: display.launch.py  gazebo.launch.py  spawn_robot.launch.py
install/my_robot_description/share/my_robot_description/meshes/: link4.STL
log/: latest_build
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/urdf/: URDFV0-1.urdf
